Fix test recruits not being deleted